--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   smooth_page_indicator: ^1.1.0
   flutter_svg: ^2.0.10+1
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
