--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   flutter_svg: ^2.0.10+1
   http: ^1.2.1
+  provider: ^6.1.2
+  shared_preferences: ^2.2.3
+  fluttertoast: ^8.2.6
 
 dev_dependencies:
   flutter_test:
